@@ -116,6 +116,16 @@
 
     <build>
         <plugins>
+            <!--this plugin is for CircleCI-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
             <!--unable asserts when running test lifecycle.-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
